# netlog

./: .gitignore  CMakeLists.txt  Device.cpp  Device.hpp  Net.cpp  Net.hpp  Nets.cpp  Nets.hpp  README.md  dummy.ini  netlog.cpp  netlog.ini
gtests/: CMakeLists.txt  tests.cpp
presentation/: Presentation.pptx  Spickzettel.txt
src/: Device.cpp  Device.hpp  Net.cpp  Net.hpp  Nets.cpp  Nets.hpp  exec.cpp  exec.hpp
